--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Zander's Internet Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #0b0b0b;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    }
+
+    .hero-wrapper {
+      width: min(100vw, 1000px); /* max width, but shrink on small screens */
+      padding: 16px;
+    }
+
+    .hero {
+      border-radius: 16px;
+      overflow: hidden;
+      background: #111;
+    }
+
+    .hero img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Zander's Internet Home</h1>
-  <p>If you can read this, GitHub Pages is working.</p>
+  <div class="hero-wrapper">
+    <div class="hero">
+      <!-- UPDATE THE src IF YOU USED A DIFFERENT FOLDER/NAME -->
+      <img src="assets/ZIH_image.png" alt="Home page sketch" />
+    </div>
+  </div>
 </body>
 </html>
