--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     }
 
     .hero-wrapper {
-      width: min(100vw, 1000px); /* max width, but shrink on small screens */
+      width: min(100vw, 1000px);
       padding: 16px;
     }
 
     .hero {
+      position: relative;          /* so we can absolutely-position zones inside */
       border-radius: 16px;
       overflow: hidden;
       background: #111;
@@ -35,13 +36,49 @@
       width: 100%;
       height: auto;
     }
+
+    /* Clickable tile areas */
+    .zone {
+      position: absolute;
+      display: block;
+      text-decoration: none;
+      cursor: pointer;
+
+      /* Uncomment these while tuning positions: */ */
+      /* background: rgba(255, 255, 255, 0.08);
+      outline: 1px solid rgba(255, 255, 255, 0.4) */
+    }
+
+    .zone:focus-visible {
+      outline: 2px solid #fff;
+      outline-offset: 2px;
+    }
   </style>
 </head>
 <body>
   <div class="hero-wrapper">
     <div class="hero">
-      <!-- UPDATE THE src IF YOU USED A DIFFERENT FOLDER/NAME -->
-      <img src="assets/ZIH_image.png" alt="Home page sketch" />
+      <!-- Main home image -->
+      <img src="assets/ZIH_image.png"
+           alt="Zander's Internet Home navigation sketch with tiles for Mind, Body, and About" />
+
+      <!-- Mind tile (entire tile clickable) -->
+      <a href="/mind"
+         class="zone"
+         aria-label="Mind"
+         style="top: 10%; left: 7%; width: 30%; height: 20%;"></a>
+
+      <!-- Body tile (entire tile clickable) -->
+      <a href="/body"
+         class="zone"
+         aria-label="Body"
+         style="top: 10%; left: 37%; width: 30%; height: 20%;"></a>
+
+      <!-- About tile (entire tile clickable) -->
+      <a href="/about"
+         class="zone"
+         aria-label="About"
+         style="top: 50%; left: 7%; width: 15%; height: 4%;"></a>
     </div>
   </div>
 </body>
