latest and all initial

--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
          class="zone"
          aria-label="About"
          style="top: 50%; left: 16%; width: 15%; height: 4.5%;"></a>
+
+      <!-- Latest tile (entire tile clickable) -->
+      <a href="/latest"
+         class="zone"
+         aria-label="latest"
+         style="top: 50%; left: 40%; width: 15%; height: 4.5%;"></a>
+
+         <!-- All tile (entire tile clickable) -->
+      <a href="/all"
+         class="zone"
+         aria-label="all"
+         style="top: 50%; left: 60%; width: 15%; height: 4.5%;"></a>
     </div>
   </div>
 </body>
