with text naming change

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="hero-wrapper">
     <div class="hero">
       <!-- Main home image -->
-      <img src="assets/ZIH_image.png"
+      <img src="assets/ZIH_image_with_text.png"
            alt="Zander's Internet Home navigation sketch with tiles for Mind, Body, and About" />
 
       <!-- Mind tile (entire tile clickable) -->
